--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to KoKoa Clone</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div id="status-bar">
-      <div class="status-bar__column btn">
+    <div class="status-bar">
+      <div class="status-bar__column">
         <span>No Service</span>
         <i class="fa-solid fa-wifi"></i>
       </div>
@@ -16,11 +17,10 @@
       </div>
       <div class="status-bar__column">
         <span>85%</span>
-        <i class="fa-solid fa-battery-three-quarters"></i>
+        <i class="fa-solid fa-battery-three-quarters fa-lg"></i>
         <i class="fa-sharp fa-solid fa-bolt"></i>
       </div>
     </div>
-
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
       <p class="welcome-header__text">
